k8s/portal-login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-login
  namespace: portal
spec:
  selector:
    app: portal-login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
