k8s/portal-login-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-login
  namespace: portal
  annotations:
    kubernetes.io/ingress.global-static-ip-name: portal-login-ingress
    networking.gke.io/managed-certificates: portal-login
    kubernetes.io/ingress.class: gce
    networking.gke.io/v1beta1.FrontendConfig: portal-login
spec:
  defaultBackend:
    service:
      name: model-manager-service
      port:
        number: 80
